--- a/main.html
+++ b/main.html
@@ -6,8 +6,17 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
-	<!-- the entire body must be written by student -->
+<body style="background-color:yellow;text-align:center">
+	 <div>
+		 <h1 id="f1">Flowers photos</h1>
+		 <p>Flaaaaawer Flaaawer Flaaaawerrr Flawerrr :)</p>
+	 </div>
+	
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>Roses Rosiee Roses Rosieee posieee Roses</p>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
